        Reviewed by Mitz.

http://bugs.webkit.org/show_bug.cgi?id=11666
        .getScreenCTM() returns wrong values

        Take into account the local transform matrix too and
        so fix getScreenCTM/getCTM for <text>.



Canonical link: https://commits.webkit.org/15032@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@17879 268f45cc-cd09-0410-ab3c-d52691b4dbfc